mdapioutput/objects/ProductDescriptionSetting__mdt.object
<CustomObject>
    <description>Mobile Product Description Setting for AHF and Retail Activities record types.</description>
    <fields>
        <fullName>ActivityRecordTypeAPI__c</fullName>
        <label>Activity Record Type API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldsLayout__c</fullName>
        <label>Fields Layout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductLookupNameAD__c</fullName>
        <label>Product Lookup AD Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLookupNameALI__c</fullName>
        <label>Product ALI Lookup API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitDialogLayoutSettings__c</fullName>
        <label>Visit Dialog Layout Settings</label>
        <referenceTo>VisitDialog_Layout__mdt</referenceTo>
        <relationshipLabel>Product Description Settings</relationshipLabel>
        <relationshipName>Product_Description_Settings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Product Description Setting</label>
    <pluralLabel>Product Description Settings</pluralLabel>
</CustomObject>